syntax = 'proto3';

package info.maaskant.wmsnotes.server.command.grpc;

service EventService {
    rpc GetEvents (GetEventsRequest) returns (stream GetEventsResponse);
}

message GetEventsRequest {
    // If not 0, only return events following the specified event
    int32 after_event_id = 1;
}

message GetEventsResponse {
    int32 event_id = 1;

    // The id of the aggregate to which the event applies
    string aggregate_id = 2;

    int32 revision = 3;

    oneof event {
        NoteCreatedEvent note_created = 10;
        NoteDeletedEvent note_deleted = 11;
        NoteUndeletedEvent note_undeleted = 12;
        AttachmentAddedEvent attachment_added = 13;
        AttachmentDeletedEvent attachment_deleted = 14;
        ContentChangedEvent content_changed = 15;
        TitleChangedEvent title_changed = 16;
        MovedEvent moved = 17;
    }

    message NoteCreatedEvent {
        string path = 1;
        string title = 2;
        string content = 3;
    }

    message NoteDeletedEvent {
    }

    message NoteUndeletedEvent {
    }

    message AttachmentAddedEvent {
        string name = 1;
        bytes content = 2;
    }

    message AttachmentDeletedEvent {
        string name = 1;
    }

    message ContentChangedEvent {
        string content = 1;
    }

    message TitleChangedEvent {
        string title = 1;
    }

    message MovedEvent {
        string path = 1;
    }
}